# ogonek

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: CMakeLists.txt  about.rst  conf.py  core.rst  glossary.rst  howtouse.rst  include.txt  index.rst  properties.rst  ranges.rst  reference.rst
doc/extracted/: concepts.g.rst  encoding.g.rst  error.g.rst  normalization.g.rst  segmentation.g.rst  text.g.rst  ucd.g.rst
doc/extracted/types/: tribool.g.rst
doc/reference/: concepts.rst  error.g.rst  segmentation.g.rst  ucd.g.rst
doc/reference/concepts/: encoding.g.rst  normalization.g.rst  segmentation.g.rst
doc/reference/types/: core.g.rst  fraction.g.rst  optional.g.rst
include/ogonek/: concepts.h++  encode.h++  encoding.h++  error.h++  error_fwd.h++  normalization.h++  segmentation.h++  text.h++  tribool.h++  types.h++  ucd.h++
include/ogonek/concepts/: core.h++  encoding.h++  normalization.h++  segmentation.h++
include/ogonek/detail/: encoded_character.h++  simple_byte_mapping_encoding.h++  static_const.h++
include/ogonek/detail/container/: either.h++  lookahead_window.h++  optional.h++  partial_array.h++  small_vector.h++
include/ogonek/detail/encoding/: simple_byte_mapping_encoding.h++
include/ogonek/detail/normalization/: decomposed.h++
include/ogonek/detail/range/: deferred.h++
include/ogonek/encodings/: atari-st.h++  cp037.h++  cp1006.h++  cp1026.h++  cp1250.h++  cp1251.h++  cp1252.h++  cp1253.h++  cp1254.h++  cp1255.h++  cp1256.h++  cp1257.h++  cp1258.h++  cp424.h++  cp437.h++  cp500.h++  cp737.h++  cp775.h++  cp850.h++  cp852.h++  cp855.h++  cp856.h++  cp857.h++  cp860.h++  cp861.h++  cp862.h++  cp863.h++  cp864.h++  cp865.h++  cp866.h++  cp869.h++  cp874.h++  cp875.h++  cp932.h++  cp936.h++  cp949.h++  cp950.h++  iso-8859-1.h++  iso-8859-10.h++  iso-8859-11.h++  (+28 more)
include/ogonek/normalization_forms/: fcc.h++  fcd.h++  nfc.h++  nfd.h++  nfkc.h++  nfkd.h++
include/ogonek/segmentation/: grapheme_cluster.h++  line.h++  sentence.h++  word.h++
include/ogonek/types/: core.h++  fraction.h++  optional.h++  tribool.h++
include/ogonek/ucd/: age.g.h++  alphabetic.g.h++  ascii_hex_digit.g.h++  bidi_class.g.h++  bidi_control.g.h++  bidi_mirrored.g.h++  bidi_mirroring_glyph.g.h++  bidi_paired_bracket.g.h++  bidi_paired_bracket_type.g.h++  block.g.h++  canonical_combining_class.g.h++  canonical_compositions.g.h++  case_folding.g.h++  case_ignorable.g.h++  cased.g.h++  changes_when_casefolded.g.h++  changes_when_casemapped.g.h++  changes_when_lowercased.g.h++  changes_when_nfkc_casefolded.g.h++  changes_when_titlecased.g.h++  changes_when_uppercased.g.h++  dash.g.h++  decomposition_mapping.g.h++  decomposition_type.g.h++  default_ignorable_code_point.g.h++  deprecated.g.h++  diacritic.g.h++  east_asian_width.g.h++  extender.g.h++  full_canonical_decomposition_mapping.g.h++  full_compatibility_decomposition_mapping.g.h++  full_composition_exclusion.g.h++  general_category.g.h++  grapheme_base.g.h++  grapheme_cluster_break.g.h++  grapheme_extend.g.h++  hangul_syllable_type.g.h++  hex_digit.g.h++  id_continue.g.h++  id_start.g.h++  (+47 more)
src/: CMakeLists.txt  lib.c++
src/encodings/: CMakeLists.txt
src/ucd/: CMakeLists.txt
test/: CMakeLists.txt  encode.c++  error.c++  tests.cmake  util.h++
test/encoding/: codepage.c++  decode.c++  encode.c++  generic.c++  test_encodings.h++  utf16.c++  utf32.c++  utf8.c++  windows-1252.c++
test/normalization/: nfc.c++  nfd.c++  nfkc.c++  nfkd.c++  normalization_tests.g.c++  normalization_tests.g.h++  test_normalization.h++
test/segmentation/: grapheme_cluster_break.c++  grapheme_cluster_tests.g.c++  line_break.c++  line_tests.g.c++  segmentation_tests.g.h++  sentence_break.c++  sentence_tests.g.c++  test_segmentation.h++  word_break.c++  word_tests.g.c++
test/ucd/: ucd.c++
tool/: extract-docs.awk
tool/transforms/: codepage.py  normalization_tests.py  segmentation_tests.py  ucd.py
