cmake_minimum_required (VERSION 3.2)

set (CODEPAGE_DIR ${PROJECT_SOURCE_DIR}/data/codepages)
set (INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set (CODEPAGE_SRC_DIR ${PROJECT_SOURCE_DIR}/src/encodings/gen)
set (CODEPAGE_TRANSFORM_TOOL ${PROJECT_SOURCE_DIR}/tool/transforms/codepage.py)

function (add_codepage list_var format codepage_src codepage_filename codepage_name)
    set (result ${${list_var}})
    list (APPEND result "${format}|${codepage_src}|${codepage_filename}|${codepage_name}")
    set (${list_var} ${result} PARENT_SCOPE)
endfunction ()

function (unwrap_codepage_map format codepage_src codepage_filename codepage_name)
    string (REPLACE "|" ";" as_list ${ARGN})

    list (GET as_list 0 ${format})
    list (GET as_list 1 ${codepage_src})
    list (GET as_list 2 ${codepage_filename})
    list (GET as_list 3 ${codepage_name})

    set (${format} ${${format}} PARENT_SCOPE)
    set (${codepage_src} ${${codepage_src}} PARENT_SCOPE)
    set (${codepage_filename} ${${codepage_filename}} PARENT_SCOPE)
    set (${codepage_name} ${${codepage_name}} PARENT_SCOPE)
endfunction ()

set (codepage_SRC)
#add_codepage (codepage_SRC 0x_var       ETSI/GSM0338.TXT                    gsm-03.38       "GSM 03.38")

add_codepage (codepage_SRC 0x           ISO8859/8859-1.TXT                  iso-8859-1      "ISO-8859-1")
add_codepage (codepage_SRC 0x           ISO8859/8859-2.TXT                  iso-8859-2      "ISO-8859-2")
add_codepage (codepage_SRC 0x           ISO8859/8859-3.TXT                  iso-8859-3      "ISO-8859-3")
add_codepage (codepage_SRC 0x           ISO8859/8859-4.TXT                  iso-8859-4      "ISO-8859-4")
add_codepage (codepage_SRC 0x           ISO8859/8859-5.TXT                  iso-8859-5      "ISO-8859-5")
add_codepage (codepage_SRC 0x           ISO8859/8859-6.TXT                  iso-8859-6      "ISO-8859-6")
add_codepage (codepage_SRC 0x           ISO8859/8859-7.TXT                  iso-8859-7      "ISO-8859-7")
add_codepage (codepage_SRC 0x           ISO8859/8859-8.TXT                  iso-8859-8      "ISO-8859-8")
add_codepage (codepage_SRC 0x           ISO8859/8859-9.TXT                  iso-8859-9      "ISO-8859-9")
add_codepage (codepage_SRC 0x           ISO8859/8859-10.TXT                 iso-8859-10     "ISO-8859-10")
add_codepage (codepage_SRC 0x           ISO8859/8859-11.TXT                 iso-8859-11     "ISO-8859-11")
add_codepage (codepage_SRC 0x           ISO8859/8859-13.TXT                 iso-8859-13     "ISO-8859-13")
add_codepage (codepage_SRC 0x           ISO8859/8859-14.TXT                 iso-8859-14     "ISO-8859-14")
add_codepage (codepage_SRC 0x           ISO8859/8859-15.TXT                 iso-8859-15     "ISO-8859-15")
add_codepage (codepage_SRC 0x           ISO8859/8859-16.TXT                 iso-8859-16     "ISO-8859-16")

#add_codepage (codepage_SRC inverse      VENDORS/ADOBE/stdenc.txt            adobe-stdenc    "Adobe Standard Encoding")
#add_codepage (codepage_SRC inverse      VENDORS/ADOBE/symbol.txt            adobe-symbol    "Adobe Symbol Encoding")
#add_codepage (codepage_SRC inverse      VENDORS/ADOBE/zdingbat.txt          adobe-zdingbat  "Adobe Zapf Dingbats Encoding")

#add_codepage (codepage_SRC 0x_bidi      VENDORS/APPLE/ARABIC.TXT            mac-arabic      "Mac OS Arabic")
add_codepage (codepage_SRC 0x           VENDORS/APPLE/CELTIC.TXT            mac-celtic      "Mac OS Celtic")
add_codepage (codepage_SRC 0x           VENDORS/APPLE/CENTEURO.TXT          mac-latin2      "Mac OS Central European")
#add_codepage (codepage_SRC 0x_var       VENDORS/APPLE/CHINSIMP.TXT          mac-chinesesimp "Mac OS Chinese Simplified")
#add_codepage (codepage_SRC 0x_var       VENDORS/APPLE/CHINTRAD.TXT          mac-chinesetrad "Mac OS Chinese Traditional")
add_codepage (codepage_SRC 0x           VENDORS/APPLE/CROATIAN.TXT          mac-croatian    "Mac OS Croatian")
add_codepage (codepage_SRC 0x           VENDORS/APPLE/CYRILLIC.TXT          mac-cyrillic    "Mac OS Cyrillic")
#add_codepage (codepage_SRC 0x_indic     VENDORS/APPLE/DEVANAGA.TXT          mac-devanagari  "Mac OS Devanagari")
add_codepage (codepage_SRC 0x           VENDORS/APPLE/DINGBATS.TXT          mac-dingbats    "Mac OS Dingbats")
#add_codepage (codepage_SRC 0x_bidi      VENDORS/APPLE/FARSI.TXT             mac-farsi       "Mac OS Farsi")
#add_codepage (codepage_SRC 0x_indic     VENDORS/APPLE/GUJARATI.TXT          mac-gujarati    "Mac OS Gujarati")
#add_codepage (codepage_SRC 0x_indic     VENDORS/APPLE/GURMUKHI.TXT          mac-gurmukhi    "Mac OS Gurmukhi")
#add_codepage (codepage_SRC 0x_bidi      VENDORS/APPLE/HEBREW.TXT            mac-hebrew      "Mac OS Hebrew")
add_codepage (codepage_SRC 0x           VENDORS/APPLE/ICELAND.TXT           mac-iceland     "Mac OS Iceland")
add_codepage (codepage_SRC 0x           VENDORS/APPLE/INUIT.TXT             mac-inuit       "Mac OS Inuit")
#add_codepage (codepage_SRC 0x_var_mult  VENDORS/APPLE/JAPANESE.TXT          mac-japanese    "Mac OS Japanese")
#add_codepage (codepage_SRC 0x_mult      VENDORS/APPLE/KEYBOARD.TXT          mac-keyboard    "Mac OS Keyboard")
#add_codepage (codepage_SRC 0x_var_mult  VENDORS/APPLE/KOREAN.TXT            mac-korean      "Mac OS Korean")
add_codepage (codepage_SRC 0x           VENDORS/APPLE/ROMAN.TXT             mac-roman       "Mac OS Roman")
add_codepage (codepage_SRC 0x           VENDORS/APPLE/ROMANIAN.TXT          mac-romanian    "Mac OS Romanian")
#add_codepage (codepage_SRC 0x_mult      VENDORS/APPLE/SYMBOL.TXT            mac-symbol      "Mac OS Symbol")
#add_codepage (codepage_SRC 0x_mult      VENDORS/APPLE/THAI.TXT              mac-thai        "Mac OS Thai")
add_codepage (codepage_SRC 0x           VENDORS/APPLE/TURKISH.TXT           mac-turkish     "Mac OS Turkish")

add_codepage (codepage_SRC 0x           VENDORS/MICSFT/EBCDIC/CP037.TXT     cp037           "CP 037")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/EBCDIC/CP1026.TXT    cp1026          "CP 1026")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/EBCDIC/CP500.TXT     cp500           "CP 500")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/EBCDIC/CP875.TXT     cp875           "CP 875")

add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP437.TXT         cp437           "CP 437")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP737.TXT         cp737           "CP 737")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP775.TXT         cp775           "CP 775")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP850.TXT         cp850           "CP 850")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP852.TXT         cp852           "CP 852")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP855.TXT         cp855           "CP 855")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP857.TXT         cp857           "CP 857")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP860.TXT         cp860           "CP 860")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP861.TXT         cp861           "CP 861")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP862.TXT         cp862           "CP 862")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP863.TXT         cp863           "CP 863")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP864.TXT         cp864           "CP 864")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP865.TXT         cp865           "CP 865")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP866.TXT         cp866           "CP 866")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP869.TXT         cp869           "CP 869")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/PC/CP874.TXT         cp874           "CP 874")

add_codepage (codepage_SRC 0x           VENDORS/MICSFT/WINDOWS/CP932.TXT    cp932           "CP 932")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/WINDOWS/CP936.TXT    cp936           "CP 936")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/WINDOWS/CP949.TXT    cp949           "CP 949")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/WINDOWS/CP950.TXT    cp950           "CP 950")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/WINDOWS/CP1250.TXT   cp1250          "CP 1250")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/WINDOWS/CP1251.TXT   cp1251          "CP 1251")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/WINDOWS/CP1252.TXT   cp1252          "CP 1252")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/WINDOWS/CP1253.TXT   cp1253          "CP 1253")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/WINDOWS/CP1254.TXT   cp1254          "CP 1254")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/WINDOWS/CP1255.TXT   cp1255          "CP 1255")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/WINDOWS/CP1256.TXT   cp1256          "CP 1256")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/WINDOWS/CP1257.TXT   cp1257          "CP 1257")
add_codepage (codepage_SRC 0x           VENDORS/MICSFT/WINDOWS/CP1258.TXT   cp1258          "CP 1258")

#add_codepage (codepage_SRC 0x_ascii     VENDORS/NEXT/NEXTSTEP.TXT           nextstep        "NextStep")

#add_codepage (codepage_SRC 0x_var       VENDORS/MISC/APL-ISO-IR-68.TXT      iso-ir-68       "ISO-IR-68")
add_codepage (codepage_SRC 0x           VENDORS/MISC/ATARIST.TXT            atari-st        "AtariST")
add_codepage (codepage_SRC 0x           VENDORS/MISC/CP424.TXT              cp424           "CP 424")
add_codepage (codepage_SRC 0x           VENDORS/MISC/CP856.TXT              cp856           "CP 856")
add_codepage (codepage_SRC 0x           VENDORS/MISC/CP1006.TXT             cp1006          "CP 1006")
add_codepage (codepage_SRC 0x           VENDORS/MISC/KOI8-R.TXT             koi8-r          "KOI8-R")
add_codepage (codepage_SRC 0x           VENDORS/MISC/KOI8-U.TXT             koi8-u          "KOI8-U")
#add_codepage (codepage_SRC 0x_var       VENDORS/MISC/KPS9566.TXT            kps-9566        "KPS 9566")
add_codepage (codepage_SRC 0x           VENDORS/MISC/KZ1048.TXT             kz-1048         "KZ-1048")

function (transform_codepages out_header_var out_impl_var)
    set (headers)
    set (impls)
    foreach (codepage_map ${ARGN})
        unwrap_codepage_map (codepage_src_fmt codepage_src_file codepage_cxx_file codepage_str_name ${codepage_map})

        set (codepage_src_file ${CODEPAGE_DIR}/${codepage_src_file})
        string (REGEX REPLACE "[-.]" "_" codepage_cxx_name ${codepage_cxx_file})

        set (header ${INCLUDE_DIR}/ogonek/encodings/${codepage_cxx_file}.h++)
        set (impl ${CODEPAGE_SRC_DIR}/${codepage_cxx_file}.g.c++)

        add_custom_command (OUTPUT ${header} ${impl}
            COMMAND python ${CODEPAGE_TRANSFORM_TOOL} ${codepage_src_fmt} ${codepage_src_file} ${header} ${impl} ${codepage_str_name}
            DEPENDS ${CODEPAGE_TRANSFORM_TOOL}
            COMMENT "Translating codepage ${codepage_str_name}"
        )
        list (APPEND headers ${header})
        list (APPEND impls ${impl})
  endforeach ()

  set (${out_header_var} ${headers} PARENT_SCOPE)
  set (${out_impl_var} ${impls} PARENT_SCOPE)
endfunction ()

transform_codepages (codepage_INC codepage_IMPL ${codepage_SRC})

add_library (ogonek_codepages STATIC ${codepage_IMPL} ${codepage_INC})
target_link_libraries (ogonek_codepages range-v3)
